# disease_detection

./: .gitignore  ACADEMIC_DOCUMENTATION.md  DEVBOX_QUICK.md  DOCKER_RANCHER.md  Dockerfile  INDEX.md  QUICK_START.md  README.md  RESUME_TRAINING.md  SETUP_LOCAL.md  SETUP_REQUIREMENTS.md  STAGE3_MULTIMODAL.md  SUBMISSION_30APRIL.md  TRAINING_STEPS.md  devbox.json  docker-compose.yml  pyproject.toml
api/: main.py
configs/: config.yaml  config_stage3.yaml  stage3.yaml
configs/model/: vit_base.yaml
configs/stage1/: mae.yaml  mae_fast.yaml
configs/stage2/: finetune.yaml  finetune_fast.yaml
configs/stage3/: ham10000.yaml
frontend/: RareSightApp.jsx  app.py
notebooks/: 01_eda_and_results.ipynb
scripts/: download_data.py  evaluate.py  preprocess.py  train_stage1_pretrain.py  train_stage2_finetune.py  train_stage3_multimodal.py
src/raresight/: __init__.py
src/raresight/evaluation/: metrics.py
src/raresight/models/: classifier.py  mae.py  multimodal.py
src/raresight/training/: losses.py  trainer.py
tests/: test_models.py
